# ChangeLog for media-libs/gst-plugins-base
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/gst-plugins-base/ChangeLog,v 1.154 2011/02/11 00:56:46 hwoarang Exp $

  11 Feb 2011; Markos Chandras <hwoarang@gentoo.org>
  gst-plugins-base-0.10.31.ebuild:
  Stable on amd64 wrt bug #353434

  07 Feb 2011; Mart Raudsepp <leio@gentoo.org>
  +files/gst-plugins-base-0.10.31-fix-tag-test-linking.patch,
  gst-plugins-base-0.10.31.ebuild:
  Fix tests when ran during upgrade from a previous version, bug 352944

  07 Feb 2011; Mart Raudsepp <leio@gentoo.org>
  gst-plugins-base-0.10.31.ebuild:
  QA: Remove unnecessary build dependency

*gst-plugins-base-0.10.31 (12 Jan 2011)

  12 Jan 2011; Arun Raghavan <ford_prefect@gentoo.org>
  +gst-plugins-base-0.10.31.ebuild:
  Bump to 0.10.31. Adds new API for metadata discovery, codec info extraction,
  and lots of fixes.

  22 Nov 2010; Arun Raghavan <ford_prefect@gentoo.org>
  gst-plugins-base-0.10.30.ebuild:
  Enable the introspection flag by default. Doesn't really affect anyone
  yet, since the USE flag is masked.

  22 Nov 2010; Arun Raghavan <ford_prefect@gentoo.org>
  gst-plugins-base-0.10.30.ebuild,
  +files/gst-plugins-base-0.10.30-fix-tag-test-linking.patch:
  Fix include order problem in tags test. Fixes bug #346169.

  22 Nov 2010; Arun Raghavan <ford_prefect@gentoo.org>
  gst-plugins-base-0.10.30.ebuild:
  Fix gstreamer required version as pointed out by EvaSDK (bug #346363)

*gst-plugins-base-0.10.30 (19 Nov 2010)

  19 Nov 2010; Arun Raghavan <ford_prefect@gentoo.org>
  +gst-plugins-base-0.10.30.ebuild, metadata.xml:
  Bump to current upstream release. Ebuild now adds gobject-introspection
  and Orc support controller by USE-flags. Highlights of this release:
  Use of Orc to completely replace liboil
  Number of ffmpegcolorspace enhancements and fixes
  Other fixes and enhancements

  23 Sep 2010; Samuli Suominen <ssuominen@gentoo.org>