@@ -1,6 +1,10 @@
 # ChangeLog for media-libs/gstreamer
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/gstreamer/ChangeLog,v 1.278 2011/02/12 03:38:23 leio Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/gstreamer/ChangeLog,v 1.279 2011/02/14 17:57:02 phajdan.jr Exp $
+
+  14 Feb 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org>
+  gstreamer-0.10.31.ebuild:
+  x86 stable wrt bug #353434
 
   12 Feb 2011; Mart Raudsepp <leio@gentoo.org> metadata.xml,
   gstreamer-0.10.31.ebuild:
