@@ -1,6 +1,10 @@
 # ChangeLog for media-libs/gst-plugins-base
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/gst-plugins-base/ChangeLog,v 1.154 2011/02/11 00:56:46 hwoarang Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/gst-plugins-base/ChangeLog,v 1.155 2011/02/14 17:57:55 phajdan.jr Exp $
+
+  14 Feb 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org>
+  gst-plugins-base-0.10.31.ebuild:
+  x86 stable wrt bug #353434
 
   11 Feb 2011; Markos Chandras <hwoarang@gentoo.org>
   gst-plugins-base-0.10.31.ebuild:
